.opsera-cwa-6/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cwa-6
  labels:
    app: cwa-6
    tenant: opsera
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: cwa-6
