.opsera-cwa-6/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cwa-6
  labels:
    app: cwa-6
    tenant: opsera
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - PLACEHOLDER_HOSTNAME
      secretName: opsera-wildcard-tls
  rules:
    - host: PLACEHOLDER_HOSTNAME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cwa-6
                port:
                  number: 80
